Add some changes according to 23 realized version
- Fix issue with empty other feedback
- Update libraries
- Update user interface for settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,8 +106,9 @@
         <item>Другое</item>
     </string-array>
 
-    <string name="rent_in">Сниму</string>
-    <string name="rent_out">Сдам</string>
+    <string name="settings_text">Я хочу:</string>
+    <string name="rent_in">Снять</string>
+    <string name="rent_out">Сдать</string>
 
     <string name="apartment">Квартиру</string>
     <string name="room">Комнату</string>
