Some updates with new design.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="bookmarks">Закладки</string>
 
     <string name="return_back">Вернуться назад</string>
+    <string name="close">Закрыть</string>
 
     <string name="add_favorites">Добавить в избранное</string>
 
